# nppes-npi-registry-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  go.mod  nppes-npi-registry.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  nppes-npi-registry.rockspec  nppes-npi-registry_sdk.lua  nppes-npi-registry_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.php  (+3 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  nppesnpiregistry_sdk.py  nppesnpiregistry_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  operation.py  response.py  result.py  spec.py  utility_type.py
py/entity/: search_npi_entity.py
py/feature/: debug_feature.py  log_feature.py  ratelimit_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_npi_direct.py  test_search_npi_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  make_error.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_path.py  register.py  result_headers.py
(+413 files in other folders)
